fix(deployment): update backend security config